fix: products are on the same height and slider doesnt have scrollbar

--- a/src/modules/HomePage/components/ProductSlider/ProductSlider.module.scss
+++ b/src/modules/HomePage/components/ProductSlider/ProductSlider.module.scss
@@ -49,5 +49,6 @@
     gap: 12px;
     overflow: scroll;
     scroll-behavior: smooth;
+    scrollbar-width: none;
   }
 }
